config/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: hello
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: yash-ans.ddns.net
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-svc
          servicePort: 80
